There is a report of an out of bounds read which could result in garbled status messages. I was able to replicate this.
Description
Description
Revisions and Commits
Revisions and Commits
rG GnuPG | |||
rG7b1db7192e6e g10: Fix garbled status messages in NOTATION_DATA | |||
rG34c649b36013 g10: Fix garbled status messages in NOTATION_DATA |
Related Objects
Related Objects
Event Timeline
Comment Actions
Here is a test signature with long notation data. During verification gpg faults when emitting the NOTATION_DATA lines.
.